--- a/SistemaGestionExamenes/SistemaGestionExamenes.csproj
+++ b/SistemaGestionExamenes/SistemaGestionExamenes.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCorrecionExamen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCorrecionExamen.Designer.cs">
+      <DependentUpon>FormCorrecionExamen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormGenerarExamen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGenerarExamen.Designer.cs">
+      <DependentUpon>FormGenerarExamen.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCorrecionExamen.resx">
+      <DependentUpon>FormCorrecionExamen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGenerarExamen.resx">
+      <DependentUpon>FormGenerarExamen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
